practice_2/deployment/004-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vs-app
  namespace: vs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vs-app
  template:
    metadata:
      labels:
        app: vs-app
    spec:
      containers:
      - name: vs-app
        image: krosf/vs:mysql
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vs-static
  namespace: vs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vs-static
  template:
    metadata:
      labels:
        app: vs-static
    spec:
      containers:
      - name: vs-static
        image: krosf/vs:static
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
